--- a/css/components/status.css
+++ b/css/components/status.css
@@ -1,6 +1,5 @@
 @import url('../fonts.css');
 @import url('../colors.css');
-@import url('../nprogress.css');
 @import url('../animations.css');
 
 
@@ -31,16 +30,48 @@ body {
     background: #fff;
 }
 
+.loading-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 999999999;
+    background: rgba(0, 0, 0, 0.459);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: .8s fadeOutLoader;
+    animation-fill-mode: forwards;
+    animation-delay: 2s;
+}
+
+.loading-container .box {
+    width: 250px;
+    padding: 30px;
+    background: #fff;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading {
+    border: 2px solid #fff;
+    border-top: 2px solid #66bb6a;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+}
+
+
 .main-header {
     text-align: center;
     height: 400px;
-    background: linear-gradient(
-        -45deg,
-        #71e069 0%,
-        #82ed88 25%,
-        #43A047 51%,
-        #66BB6A 100%
-    );
+    background: linear-gradient(-45deg,
+            #71e069 0%,
+            #82ed88 25%,
+            #43A047 51%,
+            #66BB6A 100%);
     background-size: 300% 300%;
     animation: backgroundAnimation 15s ease infinite;
 }
@@ -54,7 +85,7 @@ body {
     padding: 40px 100px;
     transition: .3s;
     position: fixed;
-    z-index: 3;
+    z-index: 9999;
 }
 
 .main-header .navbar-shrink {
@@ -69,7 +100,8 @@ body {
     align-items: center;
 }
 
-.main-header .navbar .item:nth-child(1), .main-header .navbar .item:nth-child(3) {
+.main-header .navbar .item:nth-child(1),
+.main-header .navbar .item:nth-child(3) {
     width: 17.5%;
 }
 
@@ -97,7 +129,6 @@ body {
 .main-header .navbar .item:nth-child(2) h1 {
     font-size: 25px;
     color: #fff;
-    font-weight: 500;
 }
 
 .main-header .navbar .item:nth-child(3) {
@@ -145,7 +176,6 @@ body {
 .main-header .navbar .item:nth-child(3) a .flag-container .flag {
     width: 30px;
     height: 30px;
-    background: url(../../assets/image/flags/iran.svg);
     background-size: cover;
 }
 
@@ -158,9 +188,6 @@ body {
     align-items: center;
     background: rgba(0, 0, 0, 0.459);
     z-index: 100000;
-    position: fixed;
-    top: 0;
-    right: 0;
 }
 
 .modal .modal-box {
@@ -177,6 +204,7 @@ body {
 
 .modal .modal-box .modal-header h1 {
     font-size: 16px;
+    font-weight: 300;
 }
 
 .modal .modal-box .modal-content {
@@ -184,17 +212,19 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 .modal .modal-box .modal-content .custom-select select {
-    width: 300px;
+    width: 100%;
     padding: 10px;
     font-family: 'IRANYekan';
     border-radius: 4px;
 }
 
-.modal .modal-box .modal-content form button {
-    width: 300px;
+.modal .modal-box .modal-content button {
+    width: 100%;
     padding: 8px;
     margin-top: 10px;
     font-family: 'IRANYekan';
@@ -207,7 +237,7 @@ body {
     transition: .2s;
 }
 
-.modal .modal-box .modal-content form button:hover {
+.modal .modal-box .modal-content button:hover {
     background: var(--secondory-color);
 }
 
@@ -287,7 +317,7 @@ main {
 
 .float-container {
     width: 53%;
-    margin: 15px 1;
+    margin: 15px 1px;
     background: var(--primary-color);
     position: relative;
     bottom: 0;
@@ -331,14 +361,14 @@ main {
     font-size: 28px;
     font-weight: bold;
     margin-top: -10px;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: var(--primary-color);
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
 @media only screen and (max-width: 1100px) {
 
@@ -352,7 +382,6 @@ main {
 
     .main-header .navbar .item:nth-child(2) h1 {
         font-size: 19px;
-        padding-right: auto;
     }
 
     .main-header .navbar .item:nth-child(1) a i {
@@ -416,5 +445,17 @@ main {
 
     .container .content .item h3 {
         font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .main-header .map-container .map {
+        animation: mapAnimationMobile 5s ease forwards;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    .main-header .map-container .map {
+        animation: mapAnimation 3.5s ease forwards;
     }
 }
