--- a/css/components/post.css
+++ b/css/components/post.css
@@ -1,292 +1,3 @@
-@import url('./fonts.css');
-@import url('./colors.css');
-@import url('./nprogress.css');
-@import url('./animations.css');
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-body {
-    background: var(--background-color);
-    font-family: 'IRANYekan', serif;
-    direction: rtl;
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    background: #FEFEFE;
-}
-
-.splash-screen {
-    height: 100%;
-    width: 100vw;
-    background: var(--primary-color);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    animation: fadeOut .8s forwards;
-    animation-delay: 3.5s;
-    z-index: 10000;
-    position: absolute;
-    overflow: hidden;
-}
-
-.splash-screen > img {
-    width: 130px;
-}
-
-.splash-screen > p {
-    color: var(--primary-color);
-    background: #fff;
-    margin-top: 80px;
-    padding: 6px 30px;
-    font-size: 12px;
-    border-radius: 60px;
-}
-
-.main-header {
-    text-align: center;
-    position: sticky;
-    top: 0;
-    z-index: 667;
-    width: 100%;
-    transition: .3s;
-}
-
-.main-header .top-nav {
-    width: 100vw;
-    height: 90px;
-    background: #fff;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 100px;
-    z-index: 666;
-}
-
-.main-header .top-nav .nav li {
-    display: inline;
-}
-
-.main-header .top-nav .logo {
-    flex: 16%;
-}
-
-.main-header .top-nav .nav {
-    flex: 50%;
-    display: flex;
-}
-
-.main-header .top-nav .buttons {
-    flex: 30%;
-}
-
-.main-header .top-nav .logo a {
-    color: var(--primary-color);
-    font-size: 25px;
-    font-weight: 850;
-}
-
-.main-header .top-nav .nav li {
-    margin-left: 15px;
-}
-
-.main-header .top-nav .nav li a {
-    font-weight: 350;
-    color: #000000;
-    transition: 0.2s;
-}
-
-.main-header .top-nav .nav li a:hover {
-    color: var(--primary-color);
-}
-
-.main-header .top-nav .nav .active > a {
-    color: var(--primary-color);
-    font-weight: 400;
-}
-
-.main-header .top-nav .buttons {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-}
-
-.main-header .top-nav .buttons .settings {
-    padding: 10px;
-    margin-right: 30px;
-    transition: .2s;
-}
-
-.main-header .top-nav .buttons .settings img {
-    width: 25px;
-}
-
-.main-header .top-nav .buttons .settings:hover {
-    border-radius: 8px;
-    background: rgba(102, 187, 106, 0.055);
-}
-
-.main-header .top-nav .buttons .button {
-    background: var(--primary-color);
-    text-align: center;
-    padding: 8px 30px;
-    border-radius: 4px;
-    transition: 0.2s linear;
-    color: #fff;
-    font-weight: 300;
-    font-size: 14px;
-}
-
-.main-header .top-nav .buttons .button:hover {
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-}
-
-.main-header .top-nav .hamburger-menu {
-    display: none;
-}
-
-
-.main-header .top-nav .drawer {
-    width: 70%;
-    height: 100vh;
-    background-color: #fff;
-    position: absolute;
-    top: 0;
-    right: -100%;
-    z-index: 9999;
-    transition: .5s;
-}
-
-.main-header .top-nav .overlay {
-    width: 30%;
-    height: 100vh;
-    background-color: #0000003f;
-    position: absolute;
-    top: 0;
-    left: -100%;
-    z-index: 9999;
-    transition: .3s;
-    opacity: 0;
-    display: none;
-}
-
-.main-header .top-nav .drawer .header {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 50px;
-    background-color: var(--primary-color);
-}
-
-.main-header .top-nav .drawer .header .close {
-    position: absolute;
-    right: 1px;
-    top: 15px;
-    width: 20px;
-    height: 20px;
-    opacity: 0.9;
-    cursor: pointer;
-    display: none;
-}
-
-.main-header .top-nav .drawer .header .close:hover {
-    opacity: 1;
-}
-
-.main-header .top-nav .drawer .header .close:before, .main-header .top-nav .drawer .header .close:after {
-    position: absolute;
-    right: 30px;
-    content: ' ';
-    height: 20px;
-    width: 2px;
-    background-color: rgb(255, 255, 255);
-}
-
-.main-header .top-nav .drawer .header .close:before {
-    transform: rotate(45deg);
-}
-
-.main-header .top-nav .drawer .header .close:after {
-    transform: rotate(-45deg);
-}
-
-.main-header .top-nav .drawer .header img {
-    width: 150px;
-}
-
-.main-header .top-nav .drawer .content {
-    width: 100%;
-    padding: 30px 10px;
-    margin-top: -20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    background-color: #fff;
-}
-
-.main-header .top-nav .drawer .content ul {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: right;
-    padding: 30px 0;
-}
-
-.main-header .top-nav .drawer .content ul li {
-    text-align: right;
-    padding: 15px;
-    list-style-type: none;
-    transition: .2s linear;
-    border-radius: 6px;
-}
-
-.main-header .top-nav .drawer .content ul .active, .main-header .top-nav .drawer .content ul .active a {
-    color: var(--primary-color);
-    font-weight: 400;
-}
-
-.main-header .top-nav .drawer .content ul li:hover {
-    background: #00000007;
-}
-
-.main-header .top-nav .drawer .content ul li a {
-    color: #333;
-    font-weight: 300;
-}
-
-.main-header .top-nav .drawer .content ul li:nth-child(1)::before {
-    content: "\e901";
-    font-family: Covido, serif;
-    margin-left: 8px;
-}
-
-.main-header .top-nav .drawer .content ul li:nth-child(2)::before {
-    content: "\e900";
-    font-family: Covido, serif;
-    margin-left: 8px;
-}
-
-.main-header .top-nav .drawer .content ul li:nth-child(3)::before {
-    content: "\e902";
-    font-family: Covido;
-    margin-left: 8px;
-}
-
-.main-header .top-nav .drawer .content h6 {
-    font-weight: 300;
-}
-
 .post-container {
     width: 100%;
     margin: 20px 0;
@@ -319,7 +30,7 @@ body {
 
 .post-container .container .title-bar h2 {
     float: right;
-    font-size: 20px;
+    font-size: 17px;
 }
 
 
@@ -359,8 +70,7 @@ body {
     position: relative;
     width: 100%;
     bottom: 4rem;
-    right: 3em;
-}
+    padding: 0 2rem;}
 
 .cover figure figcaption ul {
     list-style-type: none;
@@ -377,11 +87,11 @@ body {
     background: var(--primary-color);
 }
 
-.info-container .container .content {
+.info-container .container > .content {
     margin: 20px 3px;
 }
 
-.info-container .container .content h1 {
+.content > h1 {
     text-align: center;
     font-size: 25px;
 }
@@ -408,10 +118,10 @@ body {
 
 .post-content .container img {
     width: 100%;
+    height: 100%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     border-radius: 15px;
+    margin: 20px auto;
 }
 
 .post-container .container .footer {
@@ -434,7 +144,7 @@ body {
 
 .footer .author-container .author {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
 }
 
@@ -494,51 +204,34 @@ body {
 
 @media only screen and (max-width: 1000px) {
 
-    .main-header {
-        display: flex;
-        justify-content: center;
+    .post-container {
+        padding: 10px 20px;
     }
 
-    .main-header .top-nav {
+    .post-container .container .top-article {
+        padding: 15px 0px;
+    }
+
+    .top-article .container, .top-article .container .content {
+        height: 250px;
+    }
+
+    .top-article .container .content {
+        padding: 12px;
+        top: -103%;
+    }
+
+    .top-article .container .content h1, .top-article .container .content h1 a {
+        font-size: 25px;
+    }
+
+    .post-container .container .articles {
+        padding: 0;
+        flex-flow: column wrap;
+    }
+
+    .articles .article {
         width: 100%;
-        margin: 12px 20px;
-        border-radius: 12px;
-        height: 76px !important;
-        padding: 0 8px !important;
-    }
-
-    .main-header .top-nav > .nav {
-        display: none;
-    }
-
-    .main-header .top-nav .buttons .button {
-        display: none;
-    }
-
-    .main-header .top-nav .logo {
-        flex: 60%;
-    }
-
-    .main-header .top-nav .hamburger-menu {
-        display: flex;
-        justify-content: right;
-        align-items: center;
-        flex: 20%;
-    }
-
-    .main-header .top-nav .hamburger-menu label {
-        padding: 8px 30px;
-    }
-
-    .main-header .top-nav .hamburger-menu label > svg {
-        width: 28px;
-        height: 28px;
-        cursor: pointer;
-        margin-left: 18px;
-    }
-
-    .main-header .top-nav .buttons {
-        flex: 20%;
     }
 
     .info-container {
@@ -577,7 +270,6 @@ body {
         font-size: 12px;
         flex-direction: column;
     }
-
 
     .author img {
         width: 30px;
